Changelog
=========

3.0b3 - Unreleased
------------------

- Removed the canonical and translations cache. It was never completely save
  to use. This closes http://plone.org/products/linguaplone/issues/82.
  [hannosch]

- Added a new synchronized language vocabulary and use it for the content and
  metadata language availability. This restricts the languages in the common
  language widgets to the set of the supported languages of the site.
  [hannosch]

- Removed the unmaintained support for using the Kupu reference browser in the
  manage_translations_form.
  [hannosch]

- Fixed a deprecation warning for the isRightToLeft script, which is used in
  the translationbrower_popup.
  [hannosch]

- Removed the GlobalRequestPatch - it is no longer required.
  [hannosch]

- Removed the `not_available_lang` template. It wasn't used anymore.
  [hannosch]

- Use request negotiation by default.
  [hannosch]

- Turn on the content language negotiator by default.
  [hannosch]

- Avoid a space after the language name in the selector.
  [hannosch]

- Modernized the code of the language index export import handler.
  [hannosch]

- Refactored common functionality of the catalog exportimport handlers. Added
  automatic reindexing for newly added indexes.
  [hannosch]

- Rearranged the package documentation to the top-level of the distribution.
  [hannosch]

- Added a buildout configuration to the package for stand-alone testing.
  [hannosch]

- Fixed bad spelling in status message in translate view.
  [hannosch]

- Make sure to use the native language name in the language selector in the
  same way Plone itself does this.
  [hannosch]

- Specify an alt text on the language selector images. This closes
  http://plone.org/products/linguaplone/issues/188.
  [hannosch]

- Fixed invalid code instructions in the README. This closes
  http://plone.org/products/linguaplone/issues/207.
  [hannosch]

- Removed the long broken portlet_languages. This was a pre-Plone 3 old-style